<resources>
    <string name="app_name">Fest Android</string>
    <string name="upcoming">Upcoming</string>
    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="map">Map</string>
    <string name="events">Events</string>
    <string name="chat">Chat</string>
    <string name="sponsors">SPONSORS</string>


    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="please_use_your_festember_credentials_to_login">Please use your Festember Credentials to login</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="log_in_2">Log In</string>
    <string name="dauth_log_in">DAuth Log In</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="phonenumber">phonenumber</string>
    <string name="register">Register</string>
    <string name="kyoto_chronicles">KYOTO CHRONICLES</string>
    <string name="festember">FESTEMBER</string>
    <string name="nit_trichy_s">NIT TRICHY\'S</string>
    <string name="hospitality">HOSPITALITY</string>
    <string name="auto_s_list">Auto\'s List</string>
    <string name="driver_name">Driver Name:</string>
    <string name="phonenumber1">phonenumber</string>
    <string name="driver_name2">Driver Name:</string>
    <string name="phonenumber2">phonenumber</string>
    <string name="driver_name3">Driver Name:</string>
    <string name="phonenumber3">phonenumber</string>
    <string name="driver_name4">Driver Name:</string>
    <string name="phonenumber4">phonenumber</string>
    <string name="driver_name5">Driver Name:</string>
    <string name="phonenumber5">phonenumber</string>
    <string name="driver_name6">Driver Name:</string>
    <string name="phonenumber6">phonenumber</string>
    <string name="driver_name7">Driver Name:</string>
    <string name="phonenumber7">phonenumber</string>
    <string name="driver_name8">Driver Name:</string>
    <string name="phonenumber8">phonenumber</string>
    <string name="driver_name9">Driver Name:</string>
    <string name="phonenumber9">phonenumber</string>
    <string name="driver_name10">Driver Name:</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="about_us">About US</string>
    <string name="contact_us">Contact US</string>
    <string name="subscribe">Subscribe</string>
    <string name="day_0">Day 0</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="t_shirt_fragment">T_shirt fragment</string>
    <string name="splash">SPLASH</string>
    <string name="d_na_ny_n3">D\na\ny\n3</string>
    <string name="d_na_ny_n2">D\na\ny\n2</string>
    <string name="d_na_ny_n1">D\na\ny\n1</string>
    <string name="d_na_ny_n0">D\na\ny\n0</string>
    <string name="day3">D\na\ny\n3</string>
    <string name="day2">D\na\ny\n2</string>
    <string name="day1">D\na\ny\n1</string>
    <string name="day0">D\na\ny\n0</string>
    <string name="day_3_events">day 3 events!</string>
    <string name="day_2_events">day 2 events!</string>
    <string name="day_1_events">day 1 events!</string>
    <string name="day_events">day events show bar!</string>
    <string name="time_line">Time Line</string>
</resources>
